namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-apps
  labels:
    app.kubernetes.io/managed-by: argocd
