chat-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend-svc
  namespace: personal-apps
spec:
  selector:
    app: chat-backend
  ports:
    - port: 8080
      targetPort: 8080
